--- a/src/main/resources/templates/webapps/index.html
+++ b/src/main/resources/templates/webapps/index.html
@@ -67,8 +67,13 @@
        th:text="${catalog.catalogName}" >
       </option>
 	</select>
-	</div> -->
-	<input type="text" class="search" id="search" placeholder="Please enter Key words" >
+	</div> --><select>
+	<option selected>--All--</option>
+	<option>Mobile</option>
+		<option>Tablets</option>
+	</select>
+	<input type="text" class="search" id="search" size="35" placeholder="Please enter Key words" >&nbsp;
+	<input type="button" value="Search" id="search">
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
@@ -76,25 +81,28 @@
                 <span class="sr-only">(current)</span>
               </a>
             </li>
-            <li class="nav-item">
+           <li class="nav-item">
               <a class="nav-link" href="/product">redae</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Services</a>
+              <a class="nav-link" href="/Catalog">Catalogs</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/catalog">Contact</a>
+              <a class="nav-link" href="/contactus">Contacts</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/login" data-target="#container" >Sign In</a>
             </li>
              <li class="nav-item">
-                <a href="/shoppingcart" data-target="#container" class="nav-link">
+                <a href="/shoppingCart" data-target="#container" class="nav-link">
                     <span id="shopping-cart"><img alt="shoppingcart" src="../images/shoppingcart.jpg" height="30" width="30">
                         <span>0</span><!-- ${numItems} from shopping cart-->
                     </span>
                 </a>
                  </li>
+                 <li class="nav-item">
+              <a class="nav-link" href="/profile">Hi <!-- ${username} --></a>
+            </li>
           </ul>
         </div>
       </div>
@@ -108,7 +116,7 @@
         <h1 class="display-3">Welcome To E-Shoppers!</h1>
         <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa, ipsam, eligendi, in quo sunt possimus non incidunt odit vero aliquid similique quaerat nam nobis illo aspernatur vitae fugiat numquam repellat.</p>
         <a href="#" class="btn btn-primary btn-lg">Call to action!</a> -->
-        <img class="card-img-top" src="../images/eshopper-Header.png" alt="">
+        <img class="card-img-top" src="../images/eshopper-Header.png" alt="homelogo" height="200">
         
       </header>
 
