--- a/src/main/resources/templates/webapps/catalog.html
+++ b/src/main/resources/templates/webapps/catalog.html
@@ -11,7 +11,8 @@
 
     <title>E-Shoppers</title>
 
-    <!-- Bootstrap core CSS -->
+
+	  <!-- Bootstrap core CSS -->
     <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" th:href="@{/css/cataloglist.css}" />
     <!-- Custom styles for this template -->
@@ -21,7 +22,7 @@
 
   <body>
 <div>
-<header th:insert="webapps/index::navHeader">	</header>
+<header th:replace="webapps/index::navHeader">	</header>
 </div>
 
 <br/>
