--- a/src/main/resources/templates/webapps/login.html
+++ b/src/main/resources/templates/webapps/login.html
@@ -22,22 +22,20 @@
 		<div class="Absolute-Center is-Responsive">
 			<div id="logo-container"></div>
 			<div class="col-sm-12 col-md-10 col-md-offset-1">
-				<form th:action="@{/login}" method="post" th:object="${user}" >
+   <!--th:object="${user}"-->
+				<form th:action="@{/login}" method="post" th:object="${user}"  >
 
-			<!--	<p th:if="${user}" class="error"><font color="red"></font>User name or password is Invalid</font></p>
-                  -->
+				<label class="alert alert-danger" th:if="${errors}" th:utext="${errors}" ></label>
                          <div class="form-group input-group">
-						<span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-						<input class="form-control" type="text" name='username' placeholder="email" />
-				<label th:value="${user}" ></label>
--->
+							 <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i>
+							 <label th:if="${#fields.hasErrors('email')}" th:errors="*{email}"	class="validation-message"></label>
 
-					</div>
+						<input class="form-control" type="text" name='email' placeholder="email" />
+     					</span></div>
 					<div class="form-group input-group">
-						<span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
-						<input class="form-control" type="password" name='password' placeholder="password" />
-			<!--			<label th:if="${#fields.hasErrors('password')}" th:errors="*{user.email}" class="validation-message"></label>
--->
+						<span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i>
+						<label th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="validation-message"></label>
+						<input class="form-control" type="password" name='password' placeholder="password" /></span>
 					</div>
 					<div class="form-group">
 						<button type="submit" class="btn btn-def btn-block">Login</button>
