--- a/src/main/resources/templates/webapps/AddToCart.html
+++ b/src/main/resources/templates/webapps/AddToCart.html
@@ -3,17 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <!-- Bootstrap core CSS -->
-   <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
     <link href="https://fonts.googleapis.com/css?family=Black+And+White+Picture" rel="stylesheet">
     <!-- Custom styles for this template -->
    <link th:href="@{/css/heroic-features.css}" rel="stylesheet">
-
-    <link rel="stylesheet" type="text/css" th:href="@{/css/AddToCart.css}" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <link rel="stylesheet" type="text/css" th:href="@{/css/AddToCart.css}" />
     <script type="text/javascript" th:src="@{/Jquery/AddToCart.js}"></script>
     <title>Title</title>
+    <script>
+        $(document).ready(function () {
+
+
+            var totalPrice=document.getElementById("totalPrice").value;
+            var unitPrice=20;
+            var cartId=119;
+            console.log(unitPrice)
+            console.log(totalPrice)
+            $('#totalPrice').on('change', function(e) {
+                console.log(e);
+                $.get("/calculate/"+parseFloat(unitPrice)+"/"+parseFloat(totalPrice)+"/"+Number(cartId),
+                    function (data, status) {
+                        alert("Data: " + data + "\nStatus: " + status);
+                    });
+            });
+        });
+
+            function fonLoad() {
+                var subtotal = [[${subtotal}]];
+                document.getElementById("cart-subtotal").innerHTML=subtotal;
+                document.getElementById("cart-tax").innerHTML= subtotal*0.05;
+                document.getElementById("cart-total").innerHTML=subtotal*0.05+15+subtotal;
+
+            }
+
+    </script>
+
 
 </head>
-<body>
+<body onload="fonLoad()" >
 <header th:replace="webapps/index :: navHeader">	</header>
 
 
@@ -23,7 +51,7 @@
         <label class="product-image">Image</label>
         <label class="product-details">Product</label>
         <label class="product-price">Price</label>
-        <label class="product-quantity">Quantity</label>
+        <!--<label class="product-quantity">Quantity</label>-->
         <label class="product-removal">Remove</label>
         <label class="product-line-price">Total</label>
     </div>
@@ -31,63 +59,43 @@
 
     <table class="table table-hover">
          <tbody>
-        <tr class = "datarow" th:each="product, iterstat : ${products}">
+        <tr class = "datarow" th:each="cart, iterstat : ${carts}"    >
 
-            <div class="product" >
+            <div class="product">
                 <div th:text="${iterstat.count}"></div>
                 <div class="product-image">
                     <img src="https://s.cdpn.io/3/dingo-dog-bones.jpg">
                 </div>
                 <div class="product-details">
-                    <div class="productName" th:text="${product.productName}"> </div>
-                    <p class="product-description" th:text="${product.description}"> </p>
+                    <div class="productName" th:text="${cart.product.productName}"> </div>
+                   <p class="product-description"  th:text="${cart.product.description}"> </p>
                 </div>
-                <div class="product-price" id="unitPrice" th:with="unit=${product.unitPrice}"  th:text="${product.unitPrice}"></div>
-                <div class="product-quantity">
-                    <script th:inline="javascript">
-                        function f(x) {
-                            alert(x);
-                            var Price = [[${product.unitPrice}]];
-                            var z= document.getElementById("totalPrice").valueOf().value;
-                            var message = [[${product.unitPrice}]];
-                            document.getElementById("result1").innerHTML=z*Price;
-                        }
-                    </script>
+                <div class="product-price" id="unitPrice" th:with="unit=${cart.product.unitPrice}" th:text="${cart.product.unitPrice}" ></div>
+                <!--<div class="product-quantity">-->
 
-                    <input type="number" id="totalPrice"  name="quantities" value="2"  min="1" onchange="f(iterstat.count)" >
-                    <!--th:onchange="${'javascript:functionXXX()'}"-->
 
-                </div>
+                    <!--<input type="number" id="totalPrice"  name="quantities" min="1"  th:value="${cart.quantity}" />-->
+                    <!--&lt;!&ndash;th:onchange="${'javascript:functionXXX()'}"&ndash;&gt;-->
+                <!--</div>-->
                 <div class="product-removal">
-                    <button class="remove-product">
-                        Remove
-                    </button>
+
+                    <a th:href="@{'/AddToCart/delete/'+${cart.id}}">Remove</a>
                 </div>
-                <!--<span th:text="${result}"></span>-->
-                <div class="product-line-price" th:id="'result' + ${iterstat.count}" ></div>
+                   <span class="product-line-price" th:text="${cart.totalPrice}"></span>
             </div>
-
-
-
-
-
-
-
-
 
         </tr>
         </tbody>
     </table>
 
-
     <div class="totals">
         <div class="totals-item">
             <label>Subtotal</label>
-            <div class="totals-value" id="cart-subtotal">71.97</div>
+            <div class="totals-value" id="cart-subtotal"   th:text="${subtotal}"></div>
         </div>
         <div class="totals-item">
             <label>Tax (5%)</label>
-            <div class="totals-value" id="cart-tax">3.60</div>
+            <div class="totals-value" id="cart-tax" ></div>
         </div>
         <div class="totals-item">
             <label>Shipping</label>
@@ -95,14 +103,13 @@
         </div>
         <div class="totals-item totals-item-total">
             <label>Grand Total</label>
-            <div class="totals-value"  id="cart-total">90.57</div>
+            <div class="totals-value"  id="cart-total"  ></div>
         </div>
     </div>
-
-    <button class="checkout">Checkout</button>
+    <a th:href="@{'/place/order/' + ${carts.get(0).customer.getCid()}}">Checkout</a>
+    <!--<button class="checkout">Checkout</button>-->
 
 </div>
 <footer th:replace="webapps/index :: footerCopyRight"></footer>
-
 </body>
 </html>
